[gd_scene load_steps=5 format=3 uid="uid://bs72ogkvdd7d6"]

[ext_resource type="Script" uid="uid://ctqc63mefeiqp" path="res://Code/Player-Controller.gd" id="1_vu2og"]
[ext_resource type="PackedScene" uid="uid://bj1xyi3bbvf42" path="res://Assets/ImportedPackages/KayKit_Skeletons_1.0_FREE/characters/gltf/Skeleton_Rogue.glb" id="2_apx4a"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.4
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_0sgo8"]
size = Vector3(1, 1.28694, 1.81421)

[node name="Player" type="CharacterBody3D"]
collision_mask = 20
script = ExtResource("1_vu2og")

[node name="Skeleton_Rogue" parent="." instance=ExtResource("2_apx4a")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Skeleton_Rogue"]
autoplay = "Idle_Combat"

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.38342e-05, 0.900119, -1.63428e-05)
shape = SubResource("CapsuleShape3D_iof21")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 0.950429, 0.310942, 0, -0.310942, 0.950429, 0.980271, 1.25121, 2.92454)

[node name="Marker3D" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.02804)

[node name="Sprite3D" type="Sprite3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.02804)

[node name="AttackBox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0164689, 0.849967, -1.45101)
shape = SubResource("BoxShape3D_0sgo8")
debug_color = Color(0.998109, 0, 0.150301, 0.42)

[node name="Attack Timer" type="Timer" parent="."]

[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
